create-azure-two-tier/security-group.tf
# Network Security Group (NSG)
resource "azurerm_network_security_group" "tech501" {
  name                = "tech501-haashim-nsg"
  resource_group_name = data.azurerm_resource_group.tech501.name
  location            = data.azurerm_resource_group.tech501.location

  security_rule {
    name                       = "AllowSSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowHTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
